--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,4 +1,4 @@
-@book{HuGuoLiang2009ANSYS,
+@book{2009HuGuoLiangANSYS,
   title={ANSYS 11.0有限元分析入门与提高},
   author={胡国良 and 任继文},
   publisher={ANSYS 11.0有限元分析入门与提高},
