update the codes

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,35 +1,36 @@
-@book{2009HuGuoLiangANSYS,
-  title={ANSYS 11.0有限元分析入门与提高},
-  author={胡国良 and 任继文},
-  publisher={ANSYS 11.0有限元分析入门与提高},
-  year={2009},
+@article{2001Applying,
+  title={Applying LSTM to Time Series Predictable through Time-Window Approaches},
+  author={ Gers, F. A.  and  Eck, D.  and  Schmidhuber, J. },
+  journal={Springer, Berlin, Heidelberg},
+  year={2001},
 }
-@phdthesis{ZhuQingJun2010Analysis,
-  title={客车骨架静动态有限元分析},
-  author={朱清君},
-  school={合肥工业大学},
-  year={2010},
+@article{2004PSO_ZhangLibiao,
+  title={基于粒子群算法求解多目标优化问题},
+  author={张利彪 and 周春光 and 马铭 and 刘小华},
+  journal={计算机研究与发展},
+  volume={41},
+  number={7},
+  pages={6},
+  year={2004},
 }
-@article{ChengHeng2010Applications,
-  title={工作模态分析在减速器监测和诊断中的应用},
-  author={程珩 and 赵远},
-  journal={振动.测试与诊断},
-  year={2010},
+@article{2005Improve_JinYixiong,
+  title={改进粒子群算法及其在输电网规划中的应用},
+  author={金义雄 and 程浩忠 and 严健勇 and 张丽},
+  journal={中国电机工程学报},
+  volume={25},
+  number={4},
+  pages={6},
+  year={2005},
 }
-@article{2010Dynamic,
-  title={Dynamic characterisation of elastomeric engine mounts of different geometry used in automotive industry: simulation approach},
-  author={ Faris, Waleed F.  and  Saad, Fazidah },
-  journal={International Journal of Vehicle Noise & Vibration},
-  volume={6},
-  number={1},
-  pages={1},
-  year={2010},
+@article{2021A,
+  title={A Varying-Parameter Recurrent Neural Network Combined with Penalty Function for Solving Constrained Multi-Criteria Optimization Scheme for Redundant Robot Manipulators},
+  author={ Zhong, N.  and  Huang, Q.  and  Yang, S.  and  Ouyang, F.  and  Zhang, Z. },
+  journal={IEEE Access},
+  volume={PP},
+  number={99},
+  pages={1-1},
+  year={2021},
 }
-@article{ZhuLinSen2010Deal,
-  title={基于模态应变能分析和板件单元贡献分析的车身阻尼处理},
-  author={朱林森 and 周鋐 and 赵静},
-  journal={汽车技术},
-  number={10},
-  pages={4},
-  year={2010},
-}
+
+
+
