--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -26,16 +26,10 @@
     %\input{chapters/docref}
     % 第五章
     \input{chapters/ch05}
-    % 第六章
+    % 参考文献
     \input{chapters/refs}
     \appendix
     \input{chapters/appendix}
-    % 参考文献
-    %\input{chapters/ref}
-    % 附录
-    %\input{chapters/appendix}
-    % 攻读硕士学位期间发表的论文
-    %\input{chapters/achievements}
     % 致谢
-    %\input{chapters/thanks}
+    \input{chapters/thanks}
 \end{document}
