update the codes

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -19,7 +19,7 @@
     % 第一章
     \input{chapters/ch01}
     % 第二章
-    %\input{chapters/formula}
+    \input{chapters/ch02}
     % 第三章
     \input{chapters/ch03}
     % 第四章
