update the v1.0 codes

--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -23,9 +23,11 @@
     % 第三章
     \input{chapters/ch03}
     % 第四章
-    %\input{chapters/docref}
+    \input{chapters/ch04}
     % 第五章
     \input{chapters/ch05}
+    % 第六章
+    \input{chapters/ch06}
     % 参考文献
     \input{chapters/refs}
     \appendix
