update some contents

--- a/report/report.tex
+++ b/report/report.tex
@@ -12,11 +12,24 @@
     \makecover
     % 摘要
     \begin{abstract}
-        (摘要内容)摘要部分要求是：宋体，五号，1.25倍行间距，首行缩进2字符，500字左右。
+        本文旨在详细介绍如何撰写毕业设计（论文）的开题报告。开题报告是毕业设计过程中的重要一步，它能够帮助研究者明确研究目标、方法和预期结果，并为后续的研究工作提供了清晰的路线图。在撰写开题报告时，需要注意以下几个关键要素。
 
-        关键词部分，宋体，五号，关键词数量4-6个，用逗号分隔，末尾不打标点符号
+        首先，在报告开头处，应添加一个有意义的标题，并附上一个简洁明了的摘要。摘要应概括研究的目标、方法和结果，为读者提供整体的概览。
 
-        \keywords{关键词A，关键词B，关键词C}
+        接下来，需对研究背景进行详细阐述。这一部分应解释为什么该研究问题具有重要性，并提出研究假设或目标。通过回答背景中的问题，可以让读者明白为什么需要进行这项研究，并对其产生兴趣。
+
+        然后，描述计划采取的研究方法和技术。在这一部分中，需要解释选择这些方法的原因，并讨论它们对回答研究问题的帮助。具体说来，可以介绍实验设计、数据采集方式以及统计分析方法等。
+
+        此外，还需说明数据收集和分析的计划。包括确定所需的仪器、设备或软件，并详细描述数据处理和解释的方法。提供这些信息有助于读者了解研究工作的可行性，同时为后续实施工作做好准备。
+
+        在报告中，也需要阐明预期的研究结果，并描述研究对该领域的贡献。通过提前思考可能的研究成果，并将其写入开题报告中，可以有效引发读者的兴趣，同时展示你对所研究领域的理解和创新能力。
+
+        最后，制定一个进度计划，列出完成研究所需的关键步骤，并设定时间表。这一部分非常重要，它将帮助你合理安排时间，并确保研究工作按时进行。
+
+        总而言之，本文提供了一份详尽的指南，旨在帮助你撰写清晰、简洁、逻辑连贯的开题报告。通过遵循这些指导原则，你将能够顺利进行毕业设计（论文）的研究工作，并取得优秀的成果。
+        \vspace{0.1\textheight}
+        
+        \keywords{毕业设计开题答辩报告，设计方法，关键步骤}
     \end{abstract}
     % 正文内容
     \begin{center}
@@ -24,61 +37,147 @@
 
         \wuhao\qquad
     \end{center}
-    \section{选题的来源、背景和意义}
-    \subsection{这是二级标题}
-    \subsubsection{这是三级标题}
-     (内容)
+    \section{引言}
+    引言主要介绍开展研究的背景和意义，阐述研究目的和研究问题，说明研究的重要性和创新点。
+    \subsection{\TeX{}}
+    \TeX{}是一种由美国计算机教授高德纳（Donald Ervin Knuth）编写的排版软件，主要用于生成高质量的结构化文档（尤其是科学、数学和技术文档），它也被用于生成中等规模的书籍。
+    它因其在生成复杂数学公式方面的强大功能而广泛用于排版学术期刊。
+    它也被用于生成中等规模的书籍，如《The \TeX{}book》和《The \LaTeX{} Companion》。
+    它是自由软件，也是一种自由软件标准——任何人都可以自由地使用和改变它的源代码，但是在修改后的代码上仍然必须保留其发布时的版权。
+    高德纳教授在1989年宣布不再对\TeX{}作任何修改，因此\TeX{}的当前版本是3.1415926，而不是3.0。
 
-     \begin{enumerate}[label=\arabic*. ]
-        \item 图：图题字体为五号楷体。引用图应在图题右上角标出文献来源。
-        
-        图号按顺序全文通排，如图1，图2等。如果图中含有几个不同部分，应将分图号标注在分图的左上角，并在图题下列出各部分内容。
-        
-        绘图必须工整、清晰、规范。其中机械零件图按机械制图规格要求；示意图应能清楚反映图示内容；照片应在右下角给出放大标尺；实验结果曲线图应制成方框图。
-        \item 表格：表格按顺序全文通排，如表1，表2等。表应有标题，字体为五号楷体，表内必须按规定的符号标注单位。
-        \item 公式：公式书写应在文中另起一行。公式后应注明序号，该序号按顺序全文通排。
-     \end{enumerate}
+    \TeX{} 的发音为“tech”，/ˈtɛx/（英语中的“ch”发音为/tʃ/，如英语中的“church”）。\TeX{}的拼写与希腊语中$\tau\epsilon\chi$的拼写相同，意思是“艺术”或“技术”。
+
+    \subsection{\LaTeX{}}
+    \LaTeX{} 是一种使用\TeX{}排版系统的格式，可以粗略地理解为\TeX{}的一种宏包，它提供了一系列的命令和环境，用于简化\TeX{}的使用。
+    \LaTeX{} 最初设计的目标是为了方便科技论文的编写，而不是书籍的排版，但是随着\LaTeX{}的发展，它已经被广泛用于排版各种类型的文档，包括书籍、报告、简历等等。
+    \LaTeXe{} 是\LaTeX{}的最新版本，它在\LaTeX{}2.09的基础上进行了改进，提供了更多的功能和更好的稳定性。
+
+    \subsection{\LaTeX{}的优缺点}
+    经常有人喜欢将\LaTeX{}与Word进行比较，认为\LaTeX{}比Word更加强大，但是也有人认为\LaTeX{}比Word更加麻烦。
+    其实这种对比是没有意义的，因为\LaTeX{}和Word是两种不同的排版系统，各有各的优缺点，我们应该根据自己的需求来选择合适的排版系统。
+    因为其设计的目标不一致，一种是以“所见即所得”为目标的Word排版软件，例如Microsoft Word、WPS、LibreOffice、openOffice等等，另一种是以“内容与格式分离”为目标的\LaTeX{}排版系统等，所以两者的优缺点也不一致。
+
+    不过这里也总结了一些\LaTeX{}的优缺点，供大家参考:
+    \begin{itemize}
+        \item 具有专业的排版能力，尤其是对于数学公式的排版，\LaTeX{}的效果更加出色。
+        \item \LaTeX{}的源文件是纯文本文件，所以可以很方便地进行版本控制，例如使用git进行版本控制。
+        \item 很容易生成交叉引用，例如图表、公式、参考文献等等。
+        \item \LaTeX{} 和\TeX{} 都是跨平台、开源、免费的软件，可以在各种操作系统上使用。
+        在本文中，\LaTeX{}的开发环境是在国产操作系统Deepin Linux 20.9上搭建的，但是在Windows、MacOS和FreeBSD上也可以很方便地搭建\LaTeX{}的开发环境。
+        \item \LaTeX{}的学习曲线比较陡峭，需要一定的学习成本。
+        \item \LaTeX{}的排版效果不是所见即所得，需要编译才能看到最终的效果，所以排查错误也比较麻烦，有时候的错误甚至很难以理解。
+    \end{itemize}
+
+    这里也列举了一些写作的基本要求，供大家参考：
+    \begin{enumerate}[label=\arabic*. ]
+    \item 图：图题字体为五号楷体。引用图应在图题右上角标出文献来源。
+    
+    图号按顺序全文通排，如图1，图2等。如果图中含有几个不同部分，应将分图号标注在分图的左上角，并在图题下列出各部分内容。
+    
+    绘图必须工整、清晰、规范。其中机械零件图按机械制图规格要求；示意图应能清楚反映图示内容；照片应在右下角给出放大标尺；实验结果曲线图应制成方框图。
+    \item 表格：表格按顺序全文通排，如表1，表2等。表应有标题，字体为五号楷体，表内必须按规定的符号标注单位。
+    \item 公式：公式书写应在文中另起一行。公式后应注明序号，该序号按顺序全文通排。
+    \end{enumerate}
     \section{文献综述}
-
+    文献综述是对相关领域的研究进展进行回顾和总结，列举和分析已有文献的优缺点，指出现有研究中存在的问题和不足之处。
     \section{研究内容和创新点}
+    预期成果和意义，这里主要阐述预期的研究成果和对学术、实践以及社会的意义，说明研究结果预计能够解决什么问题或提供什么新的见解。
     \section{研究方法和设计方案}
+    研究方法是明确研究的方法和步骤，具体描述采用的研究设计、数据收集和分析方法，以及预计的样本选择和实验流程等。
+
+    在这个章节中，我列举一个详细的排版例子，供大家参考。
+    \subsection{索波列夫空间}
+    \subsubsection{空间$H^{1}\left[a,b\right]$}
+    把在区间$[a,b]$上具有一阶连续可微函数的全体所构成的集合记为$\widehat{H}^{1}[a,b]$.
+    显然 在通常的函数加法和数乘的规则下,$\widehat{H}^{1}[a,b]$是线性空间.对于任意函数$u(t),v(t)\in\widehat{H}^{1}[a,b]$,定义其内积
+    \begin{equation}
+        \left(u,v\right)=\int_{a}^{b}u(t)v(t)dt+\int_{a}^{b}u'(t)v'(t)dt
+    \end{equation}
+    不难验证它满足内积的4条公理,因此$\widehat{H}^{1}[a,b]$是内积空间,相应的范数是
+    \begin{equation}
+        \left|\right|u\left|\right|=\left\{\int_{a}^{b}u(t)v(t)dt+\int_{a}^{b}u'(t)v'(t)dt\right\}^{1/2}\label{equ:value_h1}
+    \end{equation}
+    $\widehat{H}^{1}[a,b]$在范数表达式\ref{equ:value_h1}意义下的完备化空间记为$H^{1}\left[a,b\right]$,称为索波列夫空间,索波列夫空间是内积空间的一种.设序列$\left\{u_{k}(t)\right\}\subset\widehat{H}^{1}[a,b]$是在范数表达式\ref{equ:value_h1}意义下的基本序列,即当$m,n\rightarrow\infty$时,
+    \begin{equation}
+        \left|\right|u_{m}-u_{n}\left|\right|^{2}= \int_{a}^{b}\left[u_{m}(t)-u_{n}(t)\right]^{2}dt+\int_{a}^{b}\left[u_{m}'(t)-u_{n}'(t)\right]^{2}dt
+    \end{equation}
+    该式等价于
+    \begin{eqnarray}
+        \int_{a}^{b}\left[u_{m}(t)-u_{n}(t)\right]^{2}dt\rightarrow0\nonumber\\
+        \int_{a}^{b}\left[u_{m}'(t)-u_{n}'(t)\right]^{2}dt\rightarrow0\nonumber
+    \end{eqnarray}
+    根据空间$L^{2}[a,b]$的完备性,存在$u(t)\in{L^{2}[a,b]}$及$\omega(t)\in{L^{2}[a,b]}$,使得当$n\rightarrow\infty$时,
+    $u(t)\rightarrow{u(t)},u\prime{(t)}\rightarrow{w(i)}$(在$L^{2}$范数意义下).
+    对于如此确定的函数$u(t)$和$w(t)$,就称$w(t)$是$u(t)$在索波列夫意义下的广义导数,并记$u\prime{(t)}=w(t)$.
+    由广义导数的定义可看出,这种导数不是关于函数在个别点处局局部性质的反映,因为它是通过在整个区间上积分的极限确定的,而积分是一种关于函数事整体性质的概念.
+    然而也应该指出,广义导数确是 通常导数概念的推广，如果函数本身在通通常微分意义下是可微的,则其导数与广义导数是一致的.
+
+    类似地,记$\widehat{H}^{2}[a,b]$为定义在区间$[a,b]$上的具有连续二阶导数的函数集合，其内积定义为
+    \begin{equation}
+        \left(u,v\right)=\int_{a}^{b}u(t)v(t)dt+\int_{a}^{b}u'(t)v'(t)dt+\int_{a}^{b}u''(t)v''(t)dt
+    \end{equation}
+    $\widehat{H}^{2}[a,b]$的完备化空间相应地记为$H^{2}[a,b]$,也称索波列夫空间.
+    空间$H^{2}[a,b]$的元$u(t)$具有一阶和二阶的广义导数,且$u\prime{(t)},u\prime\prime{(t)}\in{L^{2}[a,b]}$.如此,可定义一般的索波列夫空间$H^{k}[a,b]$.
+    \subsubsection{表的画法}
+    表的画法如表\ref{tab:heightweight}所示。
+    \begin{table}[!htp]
+        \newcolumntype{L}{X}
+        \newcolumntype{C}{>{\centering \arraybackslash}X}
+        \newcolumntype{R}{>{\raggedright \arraybackslash}X}
+        \centering
+        \caption{某校学生身高体重样本}
+        \label{tab:heightweight}
+        \begin{tabularx}{0.9\textwidth}{CCCC}
+           \toprule[1.5pt]
+            序号&年龄&身高&体重\\
+            \midrule[0.75pt]
+            1&14&156&42\\
+            2&16&158&45\\
+            3&14&162&48\\
+            4&15&163&50\\
+            \midrule[0.75pt]
+            %\cmidrule{2-4}
+            平均&15&159.75&46.25\\
+            \bottomrule[1.5pt]
+        \end{tabularx}
+    \end{table}
+    \subsubsection{图的画法}
+    这里用到了tikz包，可以在\href{https://pgfplots.sourceforge.net/}{这里}学习tikz的使用方法。
+    \begin{figure}
+        \centering
+        \begin{tikzpicture}
+            \begin{axis}[
+            title=需要微调的示例,
+            xlabel=$x$,
+            ylabel=$y$,
+            ]
+            \addplot3 [surf,
+            mesh/interior colormap={blueblack}{
+            color=(black) color=(blue)
+            },
+            colormap/blackwhite,
+            domain=0:1,
+            ] {
+            sin(deg(8*pi*x))* exp(-20*(y-0.5)^2)
+            + exp(-(x-0.5)^2*30
+            - (y-0.25)^2 - (x-0.5)*(y-0.25))
+            };
+            \end{axis}
+        \end{tikzpicture}
+        \caption{这是一个示例图}
+        \label{fig:figure_example}
+    \end{figure}
     \section{研究重点、难点及解决方案}
-    \section{完成学位论文的计划安排}
-    \section{经费落实情况}
-    \section{预期学术成果及应用价值}
+    预期困难和解决方案，这里预测可能遇到的困难、挑战和风险，提出相应的解决方案和对策，并进行合理的论证和分析。
+    \section{计划与进度安排}
+    计划与进度是详细描述完成研究所需的工作计划和时间进度，将整个研究过程分解为各个阶段，说明每个阶段的目标、任务和时间节点。
     \section{参考文献}
 
     参考文献格式：
     \begin{enumerate}[label=\arabic*. ]
         \item 按论文中参考文献出现的先后顺序用阿拉伯数字连续编号，将序号置于方括号内，并视具体情况将序号作为上角标，或作为论文的组成部分。如：“……李××［１］对此作了研究，数学模型见文献［2］。”
         \item 参考文献中每条项目应齐全。文献中的作者不超过三位时全部列出；超过三位时一般只列前三位，后面加“等”字或“et al”；作者姓名之间用逗号分开；中外人名一律采用姓在前，名在后的著录法。
-    \end{enumerate}
-
-    
-    参考文献中著录格式示例：
-    \begin{enumerate}[label=（\arabic*） ]
-        \item 期刊
-        
-        [序号] 作者.题名[J].刊名,出版年份,卷号(期号):起止页码.
-        \item 专著
-        
-        [序号] 作者.书名:版本(第１版不标注) [M].出版地:出版者,出版年:起止页码.
-
-        \item 论文集
-        
-        [序号] 主编.论文集名[C].出版地:出版者,出版年:起止页码.
-
-        \item 学位论文
-        
-        [序号] 作者.题名[D].出版地:出版者,出版年:起止页码.
-
-        \item 专利
-        
-        [序号] 专利申请者.题名:专利号[P].公告日期.
-
-        \item 技术标准
-        
-        [序号] 起草责任者.标准名称:标准代号 标准顺序号－发布年[S].出版地:出版者,出版年度: 起止页码.
     \end{enumerate}
 
     举个例子，这里文献\citet{PSO_ZhangLibiao2004}中说明粒子群算法对多目标优化问题具有较好的性质。注意编译的时候需要使用xetex->bibtex->xetex->xetex的编译方式进行编译。
